# crypto-yield-farming-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.data_collector  Dockerfile.data_recorder  Dockerfile.strategy_runner  README.md  docker-compose.yaml
.sqlx/: query-073538fe67e7aefcc51f8aa23ff7d86588540d385f243b1186557914ace4a675.json  query-14820ce79f7feb8d435f95b2b867838bdb1c34a6a0c02adf154938ae807f52e2.json  query-1c7b0c718cb5635416bee26e74833de25098a4585548d5c6b9e1c37b0abc35a9.json  query-3c8de28299d0c6e3cd6af7e15888e4ae4b459e5436631a170cb8a7d951942321.json  query-41873c451871bbe9d50b352930185f23e73ead23679e533205786fee60991015.json  query-43d8b90c5a8aa95bd63bc5bb4c4431b8b0197b4572f23fbd4e033e2840d3724a.json  query-51c10fdfe7f4a5ceb037197e686ac164222358e2a2901ec8b1113abad212162b.json  query-53bfbd1e32f71561374460c48639e85735589642f474e6d6b360bd9921ca2308.json  query-57453fcc7da9e901ae422f0ecc1e11e7e81870b4e167c5c8420ad76000bab259.json  query-58779f629126e0e2b2e0515e6a65f93cab6ed94a4b68febfd3b507e195b0d7bf.json  query-7839f4645ca241e8b83c7f4ced61000bb87e6d86df494e20221c9ab60854ebaf.json  query-988e2c79b2bb205175de3b8754e0fe6264a8573ad6c126ce37df25d828dc848d.json  query-bdd0edcd8ccb8210ef2259ea570484bf437a449dd0a2887fcd754b1cf72b23cb.json  query-c4649c7398d67255766920e404009b9cc0769697978054eece2a64550183aecb.json  query-ca4475d6fd5c2e2b3286ad0bb37c66bea2ce23fa684b0327a15c2c5222805959.json  query-d18e84afc24cc43eeb57b13aa1d2e87aad3320f279ab5f167eaaf531ea305d3d.json
abis/: DataStore.json  EventEmitter.json  ExchangeRouter.json  Reader.json
alloy/: config.alloy
data/: markets_data.json  testnet_asset_token_data.json
fetched_abis/: Reader.json
src/: abi_fetcher.rs  config.rs  constants.rs  gmx.rs  gmx_structs.rs  lib.rs  logging.rs  main.rs  market.rs  market_utils.rs  oracle.rs  return_calculation_utils.rs  token.rs  token_registry.rs  wallet.rs
src/data_ingestion/: mod.rs
src/data_ingestion/market/: market.rs  market_registry.rs  market_utils.rs  mod.rs
src/data_ingestion/token/: oracle.rs  token_registry.rs
src/db/: connection.rs  db_manager.rs  mod.rs
src/db/models/: dydx_perp_states.rs  dydx_perps.rs  market_states.rs  markets.rs  mod.rs  portfolio_snapshots.rs  position_snapshots.rs  strategy_runs.rs  strategy_targets.rs  token_prices.rs  tokens.rs  trades.rs
src/db/queries/: dydx_perp_states.rs  dydx_perps.rs  market_states.rs  markets.rs  portfolio_snapshots.rs  position_snapshots.rs  strategy_runs.rs  strategy_targets.rs  token_prices.rs  tokens.rs  trades.rs
src/db/schema/: dydx_perp_states.sql  dydx_perps.sql  market_states.sql  markets.sql  mod.rs  portfolio_snapshots.sql  position_snapshots.sql  strategy_runs.sql  strategy_targets.sql  token_prices.sql  tokens.sql  trades.sql
src/execution/: engine.rs  mod.rs  planner.rs  types.rs
src/gm_token_txs/: gm_tx_manager.rs  mod.rs  types.rs
src/gmx/: datastore.rs  event_fetcher.rs  event_listener.rs  event_listener_utils.rs  exchange_router.rs  exchange_router_utils.rs  gmx_datastore.rs  gmx_reader.rs  gmx_reader_structs.rs  mod.rs  multicall.rs  reader.rs  reader_utils.rs
src/hedging/: dydx_client.rs  hedge_utils.rs  mod.rs  skip_go.rs
src/market/: market.rs  market_registry.rs
src/spot_swap/: mod.rs  paraswap_api_client.rs  paraswap_types.rs  swap_manager.rs  types.rs
src/strategy/: allocator.rs  covariance.rs  engine.rs  fee_model.rs  mod.rs  pnl_model.rs  strategy_constants.rs  types.rs
src/token/: mod.rs  oracle.rs  token.rs  token_registry.rs
tokens/: asset_token_data.json
