[package]
name = "crypto-yield-farming-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"    # Load environment variables from .env file
ethers = "2" # Ethereum
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
tokio = { version = "1", features = ["full"] } # Async runtime
eyre = "0.6" # East error handling
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP client
serde_json = "1" # Working with JSON
futures = "0.3" # Async programming utilities
tracing = "0.1" # Logging, especially for async code
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] } # Subscriber for tracing
tracing-appender = "0.2"
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] } # Decimal arithmetic
chrono = "0.4" # Date and time handling

