[package]
name = "crypto-yield-farming-bot"
version = "0.1.0"
edition = "2024"

# Binary targets
[[bin]]
name = "data_collector"
path = "src/bin/data_collector.rs"

[[bin]]
name = "data_recorder"
path = "src/bin/data_recorder.rs"

[[bin]]
name = "trading_bot"
path = "src/bin/trading_bot.rs"

[[bin]]
name = "main"   # For development and testing
path = "src/bin/main.rs"

[dependencies]
dotenvy = "0.15"    # Load environment variables from .env file
ethers = { version = "2", features = ["ws"] } # Ethereum with WebSocket support
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
tokio = { version = "1", features = ["full"] } # Async runtime
eyre = "0.6" # East error handling
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP client
serde_json = "1" # Working with JSON
futures = "0.3" # Async programming utilities
tracing = "0.1" # Logging, especially for async code
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] } # Subscriber for tracing
tracing-appender = "0.2"
tracing-loki = "0.2" # Loki logging integration
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] } # Decimal arithmetic
chrono = { version = "0.4", features = ["serde"] } # Date and time handling
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "rust_decimal"] } # Database interaction
redis = { version = "0.27", features = ["tokio-comp"] } # Redis client 

