[package]
name = "crypto-yield-farming-bot"
version = "0.1.0"
edition = "2024"

# Binary targets
[[bin]]
name = "data_collector"
path = "src/bin/data_collector.rs"

[[bin]]
name = "data_recorder"
path = "src/bin/data_recorder.rs"

[[bin]]
name = "trading_bot"
path = "src/bin/trading_bot.rs"

[[bin]]
name = "main"   # For development and testing
path = "src/bin/main.rs"

[[bin]]         # Utility to see wallet balances
name = "see_balances"
path = "src/bin/see_balances.rs"

[[bin]]         # Utility for spot swaps
name = "spot_swap"
path = "src/bin/spot_swap.rs"

[[bin]]        # Utility for transafting GM tokens
name = "transact_gm_tokens"
path = "src/bin/transact_gm_tokens.rs"

[[bin]]        # Utility for depositing/withdrawing from dYdX (via SkipGo from Arbitrum)
name = "dydx_transfer"
path = "src/bin/dydx_transfer.rs"

[dependencies]
dotenvy = "0.15"    # Load environment variables from .env file
ethers = { version = "2", features = ["ws", "rustls"] } # Ethereum with WebSocket support
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_url_params = "0.2" # URL encoding/decoding
tokio = { version = "1", features = ["full"] } # Async runtime
eyre = "0.6" # East error handling
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP client
reqwest-middleware = { version = "0.4", features = ["json"] } # Middleware for reqwest
reqwest-retry = "0.7" # Retry middleware for reqwest
reqwest-ratelimit = "0.4" # Rate limiting middleware for reqwest
governor = "0.10" # Rate limiting library
nonzero_ext = "0.3" # Non-zero integer types for use with governor
serde_json = "1" # Working with JSON
futures = "0.3" # Async programming utilities
tracing = "0.1" # Logging, especially for async code
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] } # Subscriber for tracing
tracing-appender = "0.2"
tracing-loki = "0.2" # Loki logging integration
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] } # Decimal arithmetic
chrono = { version = "0.4", features = ["serde"] } # Date and time handling
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "rust_decimal"] } # Database interaction
redis = { version = "0.27", features = ["tokio-comp"] } # Redis client 
rand = "0.9" # Random number generation
rand_distr = "0.5" # Statistical distributions for random sampling
ndarray = "0.16" # N-dimensional arrays
ndarray-stats = "0.6" # Stats for N-dimensional arrays
ndarray-linalg = "0.16" # Linear algebra for ndarray
argmin = { version = "0.10", features = ["serde1"] } # Optimization library
argmin-math = "0.4" # Math operations for argmin
rayon = "1.8" # Data parallelism for performance-critical computations
thiserror = "1.0" # Derive error types
url = "2.5" # URL parsing and manipulation
dydx = "0.3" # dYdX API client
dydx-proto = "0.4" # dYdX protocol
rustls = { version = "0.23", features = ["aws-lc-rs"] } # TLS library
cosmrs = "0.22" # Cosmos SDK client
hex = "0.4" # Hex encoding and decoding
bip39 = "2.2" # BIP-39 mnemonic handling
base64 = "0.22" # Base64 encoding and decoding
ibc-proto = "0.52" # IBC protocol buffers
prost = "0.13" # Protocol Buffers implementation
